crates/swc/tests/tsc-references/unionTypeCallSignatures6.1.normal.js
//// [unionTypeCallSignatures6.ts]
f1(); // error
f2(); // error
x1.f0();
x1.f1();
x1.f2();
x1.f3(); // error
x1.f4(); // error
x2.f4();
f3(); // error
f4(); // error
